Some support for "proceedOnError"-like with javac
This allows to generate some .class files from invalid Java files,
enabling very convenient workflows during debug and hotswap.