@@ -49,6 +49,8 @@
 						<arg>--add-exports</arg>
 						<arg>jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED</arg>
 						<arg>--add-exports</arg>
+						<arg>jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
 						<arg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.taglets.snippet=ALL-UNNAMED</arg>
 						<arg>--add-exports</arg>
 						<arg>jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.taglets=ALL-UNNAMED</arg>
